# NTBot

./: README.md  pyproject.toml
src/plugins/networktools/: __init__.py  __main__.py  config.py  test.py
src/plugins/networktools/commands/: nslookup_cmd.py  tcping_cmd.py  webshot_cmd.py  whois_cmd.py  whois_command.py
src/plugins/networktools/func/: nslookup.py  tcping.py  text_format.py  webshot.py  whois.py
